--- a/hocvien.html
+++ b/hocvien.html
@@ -20,11 +20,11 @@
    <body style="background:#F7F5F4;">
       <!-- Start Header -->
       <!-- Start Header -->
-      <div class="main">
+      <div class="main" >
          <div class="wrapper">
-            <div class="container">
+            <div class="container" >
                <div class="row head_page">
-                  <div class="col-md-12 clearfix header-section">
+                  <div class="col-md-12 clearfix header-section" >
                      <div class="col-md-2 tobica-logo float-left">Logo</div>
                      <nav class="navbar navbar-expand-lg navbar-light float-left">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -141,163 +141,145 @@
                                    </div>
 
                                         <!-- End Slide-show -->
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                                        <div class="main">
+                                           <div class="wrapper">
+                                              <div class="container" style="margin-top:70px;">
+                                                <div class="row">
+                                                   <div class="col-md-12 text-center text-warning bg-warning">
+                                                      <h3 style=""> đ</h3>
+                                                   </div>
+                                                </div>
                                      <!--Câu chuyện thành công-->
                                      <!-- Start content -->
-                                   <h1 style="color:Orange;text-align:center;">Success Story</h1>
+   <h1 style="">Success Story</h1>
                      <div class="row" id="bgr" >
 
-                     <div class="col-sm-3">
-                       <div class="text-center mb-4 mt-4"  >
-                         <div class="card mx-auto img-fluid hv"  style=" width: 14.6rem;">
-                          <figure>
-
-
-                           <img class="card-img-top img "    src="images/hv3.jpg" alt="Card image cap">
-
-                             <h5 class="card-title">Pauce Wallker</h5>
-                             <h6 class="card-title">Design Team</h6>
-                             <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
-
-                             <button type="button" class="btn btn-warning">Xem Thêm</button>
-
-                          </figure>
-                         </div>
+                     <div class="col-md-3">
+                       <div class="fast_access  ">
+                          <ul class="list_access ">
+                             <li ><img src="images/hometobica/home.png" width="40px" style="margin-right:5px;" alt="">FAST ACCESS</li>
+                             <li><a href="#11" ><img src="images/hometobica/muiten.png" alt="">Basic Class 1</a></li>
+                             <li><a href="#12"><img src="images/hometobica/muiten.png" alt="">Basic class 2</a></li>
+                             <li><a href="#13"><img src="images/hometobica/muiten.png" alt="">Event</a></li>
+                             <li><a href="#14"><img src="images/hometobica/muiten.png" alt="">Advanced English 1</a></li>
+                             <li><a href="#16"><img src="images/hometobica/muiten.png" alt="">News</a></li>
+                             <li><a href="#15"><img src="images/hometobica/muiten.png" alt="">Toetic Class  <img src="images/hometobica/new.gif" width="40px;" alt=""> </a></li>
+                          </ul>
                        </div>
+                       <img style="margin-top:20px;margin-left:10px;" src="images/hometobica/book.png" width="260px" height="400px;" alt="">
+
 
                      </div>
 
-                     <div class="col-sm-3">
+                     <div class="col-md-3">
                        <div class="text-center mb-4 mt-4"  >
                          <div class="card mx-auto img-fluid hv"  style="width: 14.6rem;">
                               <figure>
-                           <img class="card-img-top img"  src="images/hv4.jpg" alt="Card image cap">
+                           <img class="card-img-top img"  src="images/hometobica/nga.png" alt="Card image cap">
 
-                             <h5 class="card-title">Miguel Runa</h5>
-                             <h6 class="card-title">Employee TeleSale</h6>
-                             <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
+                             <h5 class="card-title"><!--images/hv4.jpg Miss fortune-->Nguyễn Thị Ngà</h5>
+                             <h6 class="card-title">Interpreter</h6>
+                             <p class="card-text text-dark">I have put in a lot of effort to succeed, and i will never give up</p>
 
                           <button type="button" class="btn btn-warning">Xem Thêm</button>
 
                            </figure>
                          </div>
                        </div>
+                       <div class="text-center mb-4 mt-4">
+                         <div class="card mx-auto img-fluid hv"   style="width: 14.6rem;">
+                             <figure>
+                           <img class="card-img-top img"   src="images/hvv2.jpg" alt="Card image cap">
+
+                             <h5 class="card-title">Vanhein</h5>
+                             <h6 class="card-title">SVM director</h6>
+                             <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
+                              <button type="button" class="btn btn-warning">Xem Thêm</button>
+
+                           </figure>
+                         </div>
+                       </div>
                      </div>
 
-                     <div class="col-sm-3">
+                     <div class="col-md-3">
                        <div class="text-center mb-4 mt-4">
                          <div class="card mx-auto img-fluid hv" style="width: 14.6rem;">
                            <figure>
                            <img class="card-img-top img"  src="images/hv1.jpeg" alt="Card image cap">
 
-                             <h5 class="card-title">Hana Spase</h5>
-                             <h6 class="card-title">SEO & Marketing</h6>
-                             <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
+                             <h5 class="card-title">Tony stark</h5>
+                             <h6 class="card-title">SVM director</h6>
+                             <p class="card-text text-dark">I have confirmed my ability, and I will always pursue my passion .</p>
                                  <button type="button" class="btn btn-warning">Xem Thêm</button>
 
                           </figure>
                          </div>
                        </div>
-                     </div>
-
-
-                     <div class="col-sm-3" >
-                       <ul class="list-group" id="list1">
-  <li class="btn list-group-item " id="head_list1">Tin Tức về English</li>
-  <li class="  list-group-item banner"><a><img src="images/banner4.jpg"  alt=""><i>Xóa mất gốc tiếng anh nhờ Phương pháp này mỗi ngày. Chỉ cần 10 phút vào thời gian rảnh. </i></a></li>
-  <li class=" list-group-item banner"><a><img src="images/banner5.jpg"  alt=""> <i>Choáng Ngợp với nội thất nhà cô Thi</i> </a></li>
-  <li class="  list-group-item banner"><a><img src="images/banner6.jpg"  alt=""> <i>Ông chủ Fackbook chuyển nhượng công ty cho FPT.</i> </a></li>
-
-</ul>
-
-                     </div>
-                   </div>
-                   <div class="row" id="bgrr">
-                   <div class="col-sm-3">
-                     <div class="text-center mb-4 mt-4">
-                       <div class="card mx-auto img-fluid hv" style="width: 14.6rem;">
-                        <figure>
-                         <img class="card-img-top img"  src="images/hvv1.jpg" alt="Card image cap">
-
-                           <h5 class="card-title">Pauce Wallker</h5>
-                           <h6 class="card-title">Design Team</h6>
-                           <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
-                             <button type="button" class=" btn btn-warning">Xem Thêm</button>
-                          </figure>
-                       </div>
-                     </div>
-                   </div>
-
-                   <div class="col-sm-3">
-                     <div class="text-center mb-4 mt-4">
-                       <div class="card mx-auto img-fluid hv"   style="width: 14.6rem;">
+                       <div class="text-center mb-4 mt-4">
+                         <div class="card mx-auto img-fluid hv"  style="width: 14.6rem;">
                            <figure>
-                         <img class="card-img-top img"   src="images/hvv2.jpg" alt="Card image cap">
+                           <img class="card-img-top img"  src="images/hvv3.jpg" alt="Card image cap">
 
-                           <h5 class="card-title">Miguel Runa</h5>
-                           <h6 class="card-title">Employee TeleSale</h6>
-                           <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
-                            <button type="button" class="btn btn-warning">Xem Thêm</button>
+                             <h5 class="card-title">Jayce hein</h5>
+                             <h6 class="card-title">SEO & Marketing</h6>
+                             <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
+                              <button type="button" class="btn btn-warning">Xem Thêm</button>
 
-                         </figure>
+                        </figure>
+                         </div>
                        </div>
                      </div>
-                   </div>
 
-                   <div class="col-sm-3">
-                     <div class="text-center mb-4 mt-4">
-                       <div class="card mx-auto img-fluid hv"  style="width: 14.6rem;">
-                         <figure>
-                         <img class="card-img-top img"  src="images/hvv3.jpg" alt="Card image cap">
 
-                           <h5 class="card-title">Hana Spase</h5>
-                           <h6 class="card-title">SEO & Marketing</h6>
-                           <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
-                            <button type="button" class="btn btn-warning">Xem Thêm</button>
+                     <div class="col-md-3" >
+                    <a href="#nn" style="">   <img style="margin-top:20px" src="images/hometobica/qcao.png" width="260px" height="300px" alt=""></a>
+              <form class="" action="" method="post" style="background:#FFC107;margin-top:22px;">
+                <div style="margin-left:10px;padding-right:10px;">
+              <h5 style="color:#003F7E;padding-top:20px;">Sign up for advice immediately</h5>
+              <h6 style="color:#003FA4">Necessary information</h6>
 
-                      </figure>
-                       </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput">Your Name</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Name">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput2">Email</label>
+      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Your Email">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput2">Phone</label>
+      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Your Number">
+    </div>
+
+              <h6>Advice about:</h6>
+              <input type="radio" name="check" value=""> Basic Class
+                    <br>
+              <input type="radio" name="check" value=""> Toetic
+                      <br>
+              <input type="radio" name="check" value="">Advanced English
+               <br>
+               <input class="btn btn-primary " style="margin-left:80px;margin-bottom:20px;margin-top:10px;" type="submit" onclick="alert('Your information was sent')" value="Submit">
+          </div>
+              </form>
+
                      </div>
+
                    </div>
 
-                   <div class="col-sm-3">
-                     <ul class="list-group" id="list2">
-                     <li class=" btn list-group-item active ">Tin tức nổi bật</li>
-                     <li class=" btn list-group-item banner"> <img  src="images/banner1.jpg" alt=""><i> Hà nội Rực rỡ ngày tết nguyên đán  </i></li>
-                     <li class=" btn list-group-item banner"><img  src="images/banner2.jpg" alt=""><i>Cận cảnh xế hộp tiền tỷ của ca sỹ Tuấn Hưng</i></li>
-                     <li class="btn  list-group-item banner"><img  src="images/banner3.jpg" alt=""><i>"Khá Bảnh" ra mắt MV gây chấn động Giang hồ</i> </li>
-
-                     </ul>
-                   </div>
-                 </div>
       <!-- Kết thúc nội dung-->
             <div class="row">
-             <div class="col-sm-4">
-               <div class="card"  style="width: 23rem;">
-
-      <ul class="list-group list-group-flush table_left">
-
-      <a href="#1">  <li class="list-group-item "> Tin vào tôi là nơi bạn thành công</li></a>
-      <a href="#2">  <li class="list-group-item">Chúng tôi biết xã hội muốn gì </li></a>
-    <a href="#3">    <li class="list-group-item">Không gì 100% , bạn chọn bạn có sẵn 50%</li></a>
-    <a href="#4">    <li class="list-group-item">Quyết định của bạn , Niềm tin của chúng tôi</li></a>
-         </ul>
-    </div>
-    <div class="card" style="width: 23rem;">
-<img src="images/banner7.jpeg" class="card-img-top dong_ho" alt="...">
-<div class="card-body">
-<p class="card-text" style="color:blue;">Rolex watches are crafted from the finest raw materials and assembled with scrupulous attention to detail. Every component is designed, developed and produced in-house to the most exacting standards.
-        <br>  <i> <del style="color:red;text-align:center;">355.000.000vnđ</del></i>
-          <br> <i style="text-align:center;color:red">259.000.000vnđ</i>
-</p>
-</div>
-</div>
-             </div>
-             <div class="col-sm-8">
+             <div class="col-md-8">
                <div class="card  doan_van">
      <div class="card-body">
        <h5 class="card-title"><b>How important is English?</b></h5>
        <p class="card-text">English and the level of importance to the lives of Vietnamese students and students. When it comes to English, people think of it as a global language: the official language of more than 53 countries and territories, the official language of the EU and the third language spoken by many people. most are only after Chinese and Spanish (you should note that China has a population of more than 1 billion people). International events, global organizations, etc. also default to English as the language of communication.
-</p>
+  </p>
 
      </div>
      <img src="images/eduonl.jpg" class="card-img-top" alt="...">
@@ -306,14 +288,19 @@
    <div class="card-body">
      <h5 class="card-title">Be Ready To Act</h5>
      <p class="card-text">Understanding that, the Vietnamese education system has put English as a compulsory subject in the school chair from the elementary years. English is also the required graduation exam for all levels.
-But the reality of learning English in Vietnam is still a headache for educators as well as parents who want their children to be good at English. How to find a standard method of learning English, help your child to improve rapidly, why do the students and students study more than ten years of English in the school but when they graduate, most of them do not deliver Can you speak English? </p>
+  But the reality of learning English in Vietnam is still a headache for educators as well as parents who want their children to be good at English. How to find a standard method of learning English, help your child to improve rapidly, why do the students and students study more than ten years of English in the school but when they graduate, most of them do not deliver Can you speak English? </p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
    </div>
    </div>
              </div>
+             <div class="col-md-4">
+
+             </div>
             </div>
 <!-- End content -->
-
+</div>
+</div>
+</div>
 
       <!-- Start footer -->
       <div class="main">
