--- a/home.html
+++ b/home.html
@@ -168,14 +168,21 @@
                      </div>
                   </div>
                </div>
+             </div>
+           </div>
+         </div>
+         <div class="main">
+            <div class="wrapper">
+               <div class="container" style="background:white">
                <!-- End Slide-show -->
                <!-- Start Content -->
+
                <div class="row">
                   <div class="col-md-12 text-center text-warning bg-warning">
                      <h3 style=""> đ</h3>
                   </div>
                </div>
-               <div class="row bg_kh">
+               <div class="row bg_kh" style="background:white;">
                   <div class="col-md-3">
                      <div class="fast_access  ">
                         <ul class="list_access ">
@@ -224,7 +231,7 @@
                      </div>
                   </div>
                </div>
-               <div class="row bg_kh ">
+               <div class="row bg_kh  "style="background:white;">
                   <div class="col-md-3">
                      <div class="card banerr1" style=" height:300px; width: 16.5rem;">
                         <img class="card-img-top banner1"  src="images/hometobica/tra.jpg" alt="Card image cap">
@@ -268,10 +275,12 @@
                   <div class="col-md-12 none">
                   </div>
                </div>
+
                <div class="text">
                   <h2>Our purpose</h2>
                </div>
-               <div class="row section_1">
+
+               <div class="row section_1 " style="background:white;">
                   <div class="col-md-4">
                      <figure>
                         <div class="intro1" style="width:350px; height:480px;">
@@ -307,10 +316,10 @@
                   <div class="col-md-12 none">
                   </div>
                </div>
-               <div class="row ">
+               <div class="row " style="background:white">
                   <div class="col-md-4">
                      <div class="earth" >
-                        <img class="card-img-top" src="images/hometobica/earth.png"  alt="Card image cap">
+                        <img class="card-img-top" src="images/hometobica/ea.gif"  alt="Card image cap">
                      </div>
                   </div>
                   <div class="col-md-8 " >
@@ -326,7 +335,7 @@
                   </div>
                </div>
                <div  class=" section ">
-                  <div class="row mission ">
+                  <div class="row mission " style="background:white">
                      <div class="col-md-6">
                         <h3>WORLD CLASS FACILITIES</h3>
                         <br>
@@ -349,7 +358,7 @@
                      <div class="col-md-6">
                         <h3>OUR VALUES</h3>
                         <br>
-                        <div class="mission values" style="width: 31rem;">
+                        <div class="mission values" style="background: white;width: 31rem;">
                            <ul>
                               <li class="list-group-item">
                                  <a id="xem1"><img src="images/hometobica/add.png" alt="">OUR MISSION</a>
@@ -380,7 +389,7 @@
                      </div>
                   </div>
                </div>
-               <div class="row">
+               <div class="row" style="background:white">
                   <div class="col-md-6">
                      <h3 style="color:#EF993D">WHY CHOOSE Tobica English?</h3>
                      <p style="">We offer a range of training packages in a range of subject areas and can offer blended learning opportunities to best meet your needs. If sitting in a room with a trainer and having the opportunity for discussion with other learners sounds good to you then we can offer this. If you prefer to study in your own time and at your own speed then one of our world class facilities.If you prefer to study in your own time and at your own speed then one of our e-learning packages may be right up your street. There is a third option, which is you like the sound of both but perhaps can’t attend all training sessions, this is when blended learning comes into its own.
@@ -393,7 +402,7 @@
                </div>
 
 
-               <div class="row">
+               <div class="row"style="background:white">
                   <div class="col-md-3">
                      <h1>1</h1>
                      <h5 class="h5">METHOD</h5>
@@ -415,10 +424,11 @@
                   <div class="col-md-12 none">
                   </div>
                </div>
-               <div class="text">
-                  <h1>Degree</h1>
-               </div>
-               <div class="row text-center">
+
+               <div class="row text-center" style="background:white">
+                 <div class="text" style="background:white;">
+                    <h1>Degree</h1>
+                 </div>
                   <div class="card bg-dark text-white">
                      <img class="card-img" src="images/homeTobica/degree.webp" alt="Card image">
                      <div class="card-img-overlay">
