--- a/hocvien.html
+++ b/hocvien.html
@@ -14,7 +14,8 @@
      <title>TOBICA - Trang Chủ</title>
      <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
      <link rel="stylesheet" href="css/home.css">
-      <title>TOBICA - Trang Chủ</title>
+      <title>Tin tuc hoc vien</title>
+
 
    </head>
    <body style="background:#F7F5F4;">
@@ -149,7 +150,7 @@
 
                                         <div class="main">
                                            <div class="wrapper">
-                                              <div class="container" style="margin-top:70px;">
+                                              <div class="container" style="background: white;margin-top:70px;">
                                                 <div class="row">
                                                    <div class="col-md-12 text-center text-warning bg-warning">
                                                       <h3 style=""> đ</h3>
@@ -158,7 +159,7 @@
                                      <!--Câu chuyện thành công-->
                                      <!-- Start content -->
    <h1 style="">Success Story</h1>
-                     <div class="row" id="bgr" >
+                     <div class="row" style="background:white;" id="bgr" >
 
                      <div class="col-md-3">
                        <div class="fast_access  ">
@@ -183,11 +184,11 @@
                               <figure>
                            <img class="card-img-top img"  src="images/hometobica/nga.png" alt="Card image cap">
 
-                             <h5 class="card-title"><!--images/hv4.jpg Miss fortune-->Nguyễn Thị Ngà</h5>
+                             <h5 class="card-title"><!--images/hv4.jpg Miss fortune-->Van Nguyen</h5>
                              <h6 class="card-title">Interpreter</h6>
                              <p class="card-text text-dark">I have put in a lot of effort to succeed, and i will never give up</p>
 
-                          <button type="button" class="btn btn-warning">Xem Thêm</button>
+                          <button type="button" class="btn btn-warning">More</button>
 
                            </figure>
                          </div>
@@ -197,10 +198,10 @@
                              <figure>
                            <img class="card-img-top img"   src="images/hvv2.jpg" alt="Card image cap">
 
-                             <h5 class="card-title">Vanhein</h5>
-                             <h6 class="card-title">SVM director</h6>
+                             <h5 class="card-title">Jenny Pham</h5>
+                             <h6 class="card-title">Act</h6>
                              <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
-                              <button type="button" class="btn btn-warning">Xem Thêm</button>
+                              <button type="button" class="btn btn-warning">More</button>
 
                            </figure>
                          </div>
@@ -216,7 +217,7 @@
                              <h5 class="card-title">Tony stark</h5>
                              <h6 class="card-title">SVM director</h6>
                              <p class="card-text text-dark">I have confirmed my ability, and I will always pursue my passion .</p>
-                                 <button type="button" class="btn btn-warning">Xem Thêm</button>
+                                 <button type="button" class="btn btn-warning">More</button>
 
                           </figure>
                          </div>
@@ -229,7 +230,7 @@
                              <h5 class="card-title">Jayce hein</h5>
                              <h6 class="card-title">SEO & Marketing</h6>
                              <p class="card-text text-dark">Some quick example text to build on the card title and make up .</p>
-                              <button type="button" class="btn btn-warning">Xem Thêm</button>
+                              <button type="button" class="btn btn-warning">More</button>
 
                         </figure>
                          </div>
@@ -273,27 +274,39 @@
                    </div>
 
       <!-- Kết thúc nội dung-->
-            <div class="row">
+            <div class="row" style="background:white; margin-top:80px;">
              <div class="col-md-8">
-               <div class="card  doan_van">
-     <div class="card-body">
-       <h5 class="card-title"><b>How important is English?</b></h5>
-       <p class="card-text">English and the level of importance to the lives of Vietnamese students and students. When it comes to English, people think of it as a global language: the official language of more than 53 countries and territories, the official language of the EU and the third language spoken by many people. most are only after Chinese and Spanish (you should note that China has a population of more than 1 billion people). International events, global organizations, etc. also default to English as the language of communication.
+
+
+       <h5 class=""><b>How important is English?</b></h5>
+       <p class="">English and the level of importance to the lives of Vietnamese students and students.</p><p> When it comes to English, people think of it as a global language: the official language of more than 53 countries and territories, the official language of the EU and the third language spoken by many people. most are only after Chinese and Spanish (you should note that China has a population of more than 1 billion people). International events, global organizations, etc. also default to English as the language of communication.
   </p>
 
-     </div>
-     <img src="images/eduonl.jpg" class="card-img-top" alt="...">
+
+     <img src="images/eduonl.jpg" width="550px" height="350px" class="" alt="...">
+
+       <h5 class="">Be Ready To Act</h5>
+       <p class="">Understanding that, the Vietnamese education system has put English as a compulsory subject in the school chair from the elementary years.</p><p> English is also the required graduation exam for all levels.
+    But the reality of learning English in Vietnam is still a headache for educators as well as parents who want their children to be good at English. How to find a standard method of learning English, help your child to improve rapidly.</p><p> Why do the students and students study more than ten years of English in the school but when they graduate, most of them do not deliver Can you speak English? </p>
+        <p class=""><small class="text-muted">Last updated 3 mins ago</small></p>
    </div>
-    <div class="card doan_van">
-   <div class="card-body">
-     <h5 class="card-title">Be Ready To Act</h5>
-     <p class="card-text">Understanding that, the Vietnamese education system has put English as a compulsory subject in the school chair from the elementary years. English is also the required graduation exam for all levels.
-  But the reality of learning English in Vietnam is still a headache for educators as well as parents who want their children to be good at English. How to find a standard method of learning English, help your child to improve rapidly, why do the students and students study more than ten years of English in the school but when they graduate, most of them do not deliver Can you speak English? </p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-   </div>
-   </div>
-             </div>
+
+
+
+
+
              <div class="col-md-4">
+<a href="#bann"><img class="gifplayer" src="images/homeTobica/bann.jpg"  width="350px"/></a>
+          <div class="section_new text-center">
+            <h3 >News</h3>
+            <div class="">
+
+            </div>
+            <div class="">
+
+            </div>
+          </div>
+
 
              </div>
             </div>
