--- a/hocvien.html
+++ b/hocvien.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -297,15 +298,42 @@
 
              <div class="col-md-4">
 <a href="#bann"><img class="gifplayer" src="images/homeTobica/bann.jpg"  width="350px"/></a>
-          <div class="section_new text-center">
+          <div class="section_new text-center" style="width:340px;">
             <h3 >News</h3>
-            <div class="">
-
+            <div class="section_new_1" style="height:160px">
+            <div class="" style="">
+             <img src="images/homeTobica/noithat.gif" width="50%" style="float:left" alt="">
             </div>
-            <div class="">
-
+            <div class="" style="width:50%;float:right;">
+<p>Super nice furniture with good price, modern style of Europe</p>
             </div>
           </div>
+          <div class="section_new_1" style="height:160px">
+          <div class="" style="">
+           <img src="images/homeTobica/thoitrang.gif" height="130px" width="50%" style="float:left" alt="">
+          </div>
+          <div class="" style="width:50%;float:right;">
+<p>Not anti-fan, too thick lipstick is Ha Ho's true enemy</p>
+          </div>
+        </div>
+        <div class="section_new_1" style="height:160px">
+        <div class="" style="">
+         <img src="images/homeTobica/car.gif" height="130px" width="50%" style="float:left" alt="">
+        </div>
+        <div class="" style="width:50%;float:right;">
+<p>Vinsmart's new supercar has become the focus of 2019</p>
+        </div>
+      </div>
+      <div class="section_new_1" style="height:160px">
+      <div class="" style="">
+       <img src="images/homeTobica/mark.gif" height="130px" width="50%" style="float:left" alt="">
+      </div>
+      <div class="" style="width:50%;float:right;">
+<p>Super nice furniture with good price, modern style of Europe</p>
+      </div>
+    </div>
+
+
 
 
              </div>
