--- a/home.html
+++ b/home.html
@@ -233,9 +233,9 @@
                </div>
                <div class="row bg_kh  "style="background:white;">
                   <div class="col-md-3">
-                     <div class="card banerr1" style=" height:300px; width: 16.5rem;">
-                        <img class="card-img-top banner1"  src="images/hometobica/tra.jpg" alt="Card image cap">
-                     </div>
+                <a href="#banner11"  >     <div class="card banerr1" style=" height:300px; width: 16.5rem;">
+                      <img class="card-img-top banner1"  src="images/hometobica/tra.jpg" alt="Card image cap">
+                     </div></a>
                   </div>
                   <div class="col-md-3 home_img">
                      <div class="text-center">
@@ -316,24 +316,7 @@
                   <div class="col-md-12 none">
                   </div>
                </div>
-               <div class="row " style="background:white">
-                  <div class="col-md-4">
-                     <div class="earth" >
-                        <img class="card-img-top" src="images/hometobica/ea.gif"  alt="Card image cap">
-                     </div>
-                  </div>
-                  <div class="col-md-8 " >
-                     <div class="">
-                        <b>
-                           <h2 class="text-center">History begin</h2>
-                        </b>
-                        <p >Our technology and art complex ToBica Our native, English and English, English, English and English, Vietnamese and English
-                           Masculine masculine The rest of us, part of one of the categories
-                        </p>
-                        <p >We have experienced many changes in many directions to get the necessary experience. The goal is to lead young people who are not good at English and wish you a bright future in the future.</p>
-                     </div>
-                  </div>
-               </div>
+
                <div  class=" section ">
                   <div class="row mission " style="background:white">
                      <div class="col-md-6">
@@ -389,6 +372,30 @@
                      </div>
                   </div>
                </div>
+               <hr>
+                    <div class="row text-center history">
+
+                         <div class="col-md-4" >
+                           <figure>
+                           <img src="images/homeTobica/famous.jpg" width="200px" height="200px" alt="">
+                               <figcaption><b>2006-2012</b> </figcaption>
+                               <figcaption>WE has 5 member </figcaption>
+                         </figure>
+                         </div>
+                         <div class="col-md-4">
+                           <figure>
+                           <img src="images/homeTobica/famous2.jpg" width="200px" height="200px" alt="">
+                               <figcaption><b>2013-2019</b> </figcaption>
+                               <figcaption>The largest English center in VIET NAM</figcaption>
+                         </figure>
+                         </div>
+                         <div class="col-md-4">
+                         <img src="images/homeTobica/famous3.jpg" width="200px" height="200px" alt="">
+                         <figcaption><b>In the future</b></figcaption>
+                         <figcaption>Will reach the globe, never give up</figcaption>
+                         </div>
+                    </div>
+
                <div class="row" style="background:white">
                   <div class="col-md-6">
                      <h3 style="color:#EF993D">WHY CHOOSE Tobica English?</h3>
