--- a/test.html
+++ b/test.html
@@ -276,7 +276,7 @@
              <div class="col-sm-8">
                <div class="card  doan_van">
      <div class="card-body">
-       <h5 class="card-title"><b>Tiếng ANh Quan Trọng như thế nào ?</b></h5>
+       <h5 class="card-title"><b>Tiếng Anh quan trọng như thế nào ?</b></h5>
        <p class="card-text">Tiếng Anh và mức độ quan trọng đối với cuộc sống của học sinh, sinh viên Việt Nam.
 Khi nhắc tới tiếng Anh, người ta nghĩ ngay đó là ngôn ngữ toàn cầu: là ngôn ngữ chính thức của hơn 53 quốc gia và vùng lãnh thổ, là ngôn ngữ chính thức của EU và là ngôn ngữ thứ 3 được nhiều người sử dụng nhất chỉ sau tiếng Trung Quốc và Tây Ban Nha (các bạn cần chú ý là Trung quốc có số dân hơn 1 tỷ người). Các sự kiện quốc tế , các tổ chức toàn cầu,… cũng mặc định coi tiếng Anh là ngôn ngữ giao tiếp.
 
