--- a/home.html
+++ b/home.html
@@ -14,9 +14,7 @@
       <title>TOBICA - Trang Chủ</title>
       <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
       <link rel="stylesheet" href="css/home.css">
-      <script src="js/home.js">
-
-      </script>
+      <script src="js/home.js"></script>
       <script type="text/javascript">
          $(document).ready(function(){
          $("#xem1").click(function(){
@@ -49,7 +47,6 @@
          })
          })
       </script>
-
    </head>
    <body style="background:#F7F5F4;">
       <!-- Start Header -->
@@ -168,15 +165,14 @@
                      </div>
                   </div>
                </div>
-             </div>
-           </div>
+            </div>
          </div>
-         <div class="main">
-            <div class="wrapper">
-               <div class="container" style="background:white">
+      </div>
+      <div class="main">
+         <div class="wrapper">
+            <div class="container" style="background:white">
                <!-- End Slide-show -->
                <!-- Start Content -->
-
                <div class="row">
                   <div class="col-md-12 text-center text-warning bg-warning">
                      <h3 style=""> đ</h3>
@@ -196,7 +192,6 @@
                         </ul>
                      </div>
                   </div>
-
                   <div class="col-md-3 home_img">
                      <div class="text-center">
                         <div class="card align_card border_card" style="width: 15rem;">
@@ -233,9 +228,11 @@
                </div>
                <div class="row bg_kh  "style="background:white;">
                   <div class="col-md-3">
-                <a href="#banner11"  >     <div class="card banerr1" style=" height:300px; width: 16.5rem;">
-                      <img class="card-img-top banner1"  src="images/hometobica/tra.jpg" alt="Card image cap">
-                     </div></a>
+                     <a href="#banner11"  >
+                        <div class="card banerr1" style=" height:300px; width: 16.5rem;">
+                           <img class="card-img-top banner1"  src="images/hometobica/tra.jpg" alt="Card image cap">
+                        </div>
+                     </a>
                   </div>
                   <div class="col-md-3 home_img">
                      <div class="text-center">
@@ -275,11 +272,9 @@
                   <div class="col-md-12 none">
                   </div>
                </div>
-
                <div class="text">
                   <h2>Our purpose</h2>
                </div>
-
                <div class="row section_1 " style="background:white;">
                   <div class="col-md-4">
                      <figure>
@@ -316,7 +311,6 @@
                   <div class="col-md-12 none">
                   </div>
                </div>
-
                <div  class=" section ">
                   <div class="row mission " style="background:white">
                      <div class="col-md-6">
@@ -373,29 +367,27 @@
                   </div>
                </div>
                <hr>
-                    <div class="row text-center history">
-
-                         <div class="col-md-4" >
-                           <figure>
-                           <img src="images/homeTobica/famous.jpg" width="200px" height="200px" alt="">
-                               <figcaption><b>2006-2012</b> </figcaption>
-                               <figcaption>WE has 5 member </figcaption>
-                         </figure>
-                         </div>
-                         <div class="col-md-4">
-                           <figure>
-                           <img src="images/homeTobica/famous2.jpg" width="200px" height="200px" alt="">
-                               <figcaption><b>2013-2019</b> </figcaption>
-                               <figcaption>The largest English center in VIET NAM</figcaption>
-                         </figure>
-                         </div>
-                         <div class="col-md-4">
-                         <img src="images/homeTobica/famous3.jpg" width="200px" height="200px" alt="">
-                         <figcaption><b>In the future</b></figcaption>
-                         <figcaption>Will reach the globe, never give up</figcaption>
-                         </div>
-                    </div>
-
+               <div class="row text-center history">
+                  <div class="col-md-4" >
+                     <figure>
+                        <img src="images/homeTobica/famous.jpg" width="200px" height="200px" alt="">
+                        <figcaption><b>2006-2012</b> </figcaption>
+                        <figcaption>WE has 5 member </figcaption>
+                     </figure>
+                  </div>
+                  <div class="col-md-4">
+                     <figure>
+                        <img src="images/homeTobica/famous2.jpg" width="200px" height="200px" alt="">
+                        <figcaption><b>2013-2019</b> </figcaption>
+                        <figcaption>The largest English center in VIET NAM</figcaption>
+                     </figure>
+                  </div>
+                  <div class="col-md-4">
+                     <img src="images/homeTobica/famous3.jpg" width="200px" height="200px" alt="">
+                     <figcaption><b>In the future</b></figcaption>
+                     <figcaption>Will reach the globe, never give up</figcaption>
+                  </div>
+               </div>
                <div class="row" style="background:white">
                   <div class="col-md-6">
                      <h3 style="color:#EF993D">WHY CHOOSE Tobica English?</h3>
@@ -407,8 +399,6 @@
                      <iframe width="500" height="275" src="https://www.youtube.com/embed/juKd26qkNAw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                </div>
-
-
                <div class="row"style="background:white">
                   <div class="col-md-3">
                      <h1>1</h1>
@@ -431,11 +421,10 @@
                   <div class="col-md-12 none">
                   </div>
                </div>
-
                <div class="row text-center" style="background:white">
-                 <div class="text" style="background:white;">
-                    <h1>Degree</h1>
-                 </div>
+                  <div class="text" style="background:white;">
+                     <h1>Degree</h1>
+                  </div>
                   <div class="card bg-dark text-white">
                      <img class="card-img" src="images/homeTobica/degree.webp" alt="Card image">
                   </div>
@@ -471,11 +460,10 @@
                      </figure>
                   </div>
                </div>
-
-               </div>
-               </div>
             </div>
          </div>
+      </div>
+      </div>
       </div>
       <!-- Start footer -->
       <div class="main">
@@ -586,9 +574,7 @@
       <!-- Content Home-->
       <!-- Script -->
       <script src="js/libs/jquery-1.9.1.min.js" type="text/javascript"></script>
-
       <script type="text/javascript" src="js/slide.js"></script>
       <script type="text/javascript" src="bootstrap/bootstrap.min.js"></script>
-
    </body>
 </html>
