--- a/home.html
+++ b/home.html
@@ -285,7 +285,7 @@
                   </div>
                </div>
                <div class="text">
-                  <img src="images/homeTobica/purpose.jpg" width="280px" alt="">
+                  <img src="images/homeTobica/purpose.jpg" style="margin-bottom:-50px;margin-top:-20px;" width="280px" alt="">
                </div>
                <div class="row section_1 " style="background:white;">
                   <div class="col-md-4">
