--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-12 clearfix header-section">
-                     <div class="col-md-2 tobica-logo float-left">Logo</div>
+                     <div class="col-md-2 tobica-logo float-left"><img src="images/homeTobica/logo.png" width="100px"style="margin-top:12px;"  alt=""> </div>
                      <nav class="navbar navbar-expand-lg navbar-light float-left">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
