--- a/layout.html
+++ b/layout.html
@@ -26,7 +26,8 @@
     <script src="js/home.js"></script>
 
   </head>
-  <body>
+  <body style="background:#F7F5F4;">
+    <!--header-->
     <div class="main">
        <div class="wrapper">
           <div class="container">
@@ -95,5 +96,137 @@
           </div>
        </div>
     </div>
+    <!--end Header-->
+
+
+<div class="main">
+   <div class="wrapper">
+      <div class="container">
+<!--Content-->
+
+
+
+        <!--End content-->
+        </div>
+        </div>
+        </div>
+
+
+
+
+
+    <!--footer-->
+    <div class="main">
+       <div class="wrapper">
+          <div class="container">
+             <div class="row tobica-pre-footer">
+                <!-- Start footer-address-->
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                   <div class="footer-address">
+                      <div class="pre-footer-heading">
+                         <h5>Support</h5>
+                      </div>
+                      <div class="contact-info-footer">
+                         <!-- Contact Info List -->
+                         <ul>
+                            <!-- Start Contact Info Item -->
+                            <li>
+                               <img src="images/icon-contact.png" alt="icon-contact" width="20px"> +0044 545 989 626
+                            </li>
+                            <li>
+                               <img src="images/icon-email.png" alt="icon-email" width="20px">
+                               <a href="mailto:Tobicaenglish@gmail.com?subject=feedback" "email me">tobicaenglish@gmail.com</a>
+                            </li>
+                            <!-- End Contact Info Item -->
+                         </ul>
+                      </div>
+                   </div>
+                </div>
+
+                <!-- End footer-address-->
+                <!-- Start footer-payment-->
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                   <div class="footer-payment">
+                      <div class="pre-footer-heading">
+                         <h5>Payment</h5>
+                      </div>
+                      <div class="row">
+                         <div class="col-6 col-md-3"><img src="images/Master.png" alt"MasterCard" width="50px" /></div>
+                         <div class="col-6 col-md-3"><img src="images/visacard.png" alt"VisaCard" width="50px" /></div>
+                         <div class="w-100"></div>
+                         <div class="col-6 col-md-3"><img src="images/jcbcard.png" alt"JCBCard" width="50px" /></div>
+                         <div class="col-6 col-md-3"><img src="images/vietinbank.jpg" alt"VietinbankCard" width="50px" /></div>
+                      </div>
+                   </div>
+                </div>
+                <!-- End footer-payment-->
+                <!-- Start footer-support-->
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                   <div class="footer-support">
+                      <div class="pre-footer-heading">
+                         <h5>Support students</h5>
+                      </div>
+                      <!-- Footer Menu -->
+                      <ul class="footer-support-menu">
+                         <!-- Footer Menu Item -->
+                         <li><a href="#">Course advice</a></li>
+                         <!-- End Footer Menu Item -->
+                         <!-- Footer Menu Item -->
+                         <li><a href="#!">Payment processing advice</a></li>
+                         <!-- End Footer Menu Item -->
+                         <!-- Footer Menu Item -->
+                         <li><a href="#!">Consultation on graduation</a></li>
+                         <!-- End Footer Menu Item -->
+                         <!-- Footer Menu Item -->
+                         <li><a href="#!">Advice on preservation of academic results</a></li>
+                         <!-- End Footer Menu Item -->
+                      </ul>
+                   </div>
+                </div>
+                <!-- End footer-support-->
+                <!-- Start footer-basis-->
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                   <div class="footer-basis">
+                      <div class="pre-footer-heading">
+                         <h5>Training facilities</h5>
+                      </div>
+                      <ul class="footer-basis-menu">
+                         <li><img src="images/icon-basis.png" alt="icon-basis" width="15px">
+                            Add 1: 8A Ton That Thuyet
+                         </li>
+                         <li><img src="images/icon-basis.png" alt="icon-basis" width="15px">
+                            Add 2: 265 Doi Can
+                         </li>
+                         <li> <img src="images/icon-basis.png" alt="icon-basis" width="15px">
+                            Add 3: Khu CN cao Hoa Lac
+                         </li>
+                      </ul>
+                   </div>
+                </div>
+                <!-- End footer-basis-->
+             </div>
+          </div>
+       </div>
+    </div>
+    <div class="main">
+       <div class="wrapper">
+          <div class="container">
+             <div class="row">
+                <div class="col-md-12 tobica-footer">
+                   <p> ©Copyright 2019 F5EnglishTobica. by All rights reserved <br>
+                      F5EnglishTobica, FPT Building, 8A Ton That Thuyet, My Đinh, Ha Noi
+                   </p>
+                </div>
+             </div>
+          </div>
+       </div>
+    </div>
+
+    <!--End footer -->
+
+    <!-- Script -->
+    <script src="js/libs/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/slide.js"></script>
+    <script type="text/javascript" src="bootstrap/bootstrap.min.js"></script>
   </body>
 </html>
