--- a/layout.html
+++ b/layout.html
@@ -97,8 +97,57 @@
        </div>
     </div>
     <!--end Header-->
-
-
+    <!--side show-->
+    <div class="main">
+       <div class="wrapper">
+          <div class="container">
+             <div class="row">
+                <div class="content-tobica">
+                   <!--Start Slide-show -->
+                   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      </ol>
+                      <div class="carousel-inner tobica-slideshow">
+                         <div class="carousel-item active">
+                            <img src="images/slide1.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                               <h2>Train communication skills</h2>
+                               <p>...</p>
+                            </div>
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/slide2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                               <h2>Overcome yourself</h2>
+                               <p>...</p>
+                            </div>
+                         </div>
+                         <div class="carousel-item">
+                            <img src="images/slide3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h2>Reaching dreams</h2>
+                               <p>...</p>
+                            </div>
+                         </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                      </a>
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
+    </div>
+<!--end Slide show-->
 <div class="main">
    <div class="wrapper">
       <div class="container">
