--- a/hocvien.html
+++ b/hocvien.html
@@ -24,7 +24,7 @@
             <div class="container">
                <div class="row head_page">
                   <div class="col-md-12 clearfix header-section">
-                     <div class="col-md-2 tobica-logo float-left" ><img src="images/homeTobica/logo.png" width="100px"style="margin-top:20px;"  alt=""> </div>
+                     <div class="col-md-2 tobica-logo float-left" ><img src="images/homeTobica/logo.png" width="100px" style="margin-top:12px;"  alt=""> </div>
                      <nav class="navbar navbar-expand-lg navbar-light float-left">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
                                  </div>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="#">About Us</a>
+                                 <a class="nav-link" href="aboutus.html">About Us</a>
                               </li>
                            </ul>
                         </div>
@@ -91,7 +91,7 @@
                                            <!-- Start content -->
       <div class="main">
       <div class="wrapper">
-         <div class="container" style="background: white;margin-top:70px;">
+         <div class="container" style="background: white;margin-top:20px;">
             <div class="row" style="background:white;" id="bgr" >
                <div class="col-md-3">
                   <div class="fast_access  ">
