--- a/home.html
+++ b/home.html
@@ -64,11 +64,11 @@
             <div class="container">
                <div class="row head_page">
                   <div class="col-md-12 clearfix header-section">
-                     <div class="col-md-2 tobica-logo float-left" ><img src="images/homeTobica/logo.png" width="100px"style="margin-top:20px;"  alt=""> </div>
+                     <div class="col-md-2 tobica-logo float-left" ><img src="images/homeTobica/logo.png" width="100px" style="margin-top:12px;"  alt=""> </div>
                      <nav class="navbar navbar-expand-lg navbar-light float-left">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                        </button>
+                        </button> -->
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                            <ul class="navi-css">
                               <li class="nav-item">
@@ -112,7 +112,7 @@
                                  </div>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="#">About Us</a>
+                                 <a class="nav-link" href="aboutus.html">About Us</a>
                               </li>
                            </ul>
                         </div>
@@ -241,7 +241,7 @@
                <div class="row bg_kh  "style="background:white;">
                   <div class="col-md-3">
                      <a href="#banner11"  >
-                        <div class="card banerr1" style="margin-left:13px; height:300px; width: 16rem;">
+                        <div class="card banerr1" style="margin-left:13px; height:300px; width: 16.7rem;">
                            <img class="card-img-top banner1"  src="images/hometobica/tra.jpg" alt="Card image cap">
                         </div>
                      </a>
@@ -437,7 +437,10 @@
                   </div>
                </div>
 
-
+               <div class="row">
+                  <div class="col-md-12 none">
+                  </div>
+               </div>
 
                <div class="row text-center " style="background:white">
                  <div  class="text col-md-6  " style="background:white;">
