--- a/Contact.html
+++ b/Contact.html
@@ -106,7 +106,7 @@
                                  </div>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="#">About Us</a>
+                                 <a class="nav-link" href="aboutus.html">About Us</a>
                               </li>
                            </ul>
                         </div>
