--- a/aboutus.html
+++ b/aboutus.html
@@ -104,7 +104,7 @@
             <p class="text-center aboutus-welcome">WELCOME</p>
             <p class="text-center" style="font-style: oblique;">We're Tobica, a professional English training center, <br> pursuing passion and constantly growing</p> 
             <div class="tobica-content-leader">
-              <p class="text-center aboutus-leader">Leader</p>
+              <p class="text-center aboutus-leader">- Leader -</p>
 
              <div class="tobica-content-leader-member">
                 <div class="leader-member">
@@ -123,14 +123,14 @@
               </div>
               <div class="leader-member">
                 <figure>
-                <img src="images/thao.jpg" alt="">
+                <img src="images/hao.jpg" alt="">
                   <figcaption>Ha Van Hao</figcaption>
                   
                 </figure>
               </div>
               <div class="leader-member">
                 <figure>
-                <img src="images/thao.jpg" alt="">
+                <img src="images/trinh.jpg" alt="">
                   <figcaption>Ngo Van Trinh</figcaption>
                   
                 </figure>
