--- a/home.html
+++ b/home.html
@@ -436,9 +436,6 @@
                      <h5 class="h5">ALLIANCE WIDTH COUNTRY</h5>
                   </div>
                </div>
-
-
-
                <div class="row text-center " style="background:white">
                  <div  class="text col-md-6  " style="background:white;">
                    <img style="float:right"  src="images/homeTobica/bangcap.jpg " width="120px" alt="">
@@ -455,11 +452,24 @@
                      <img style="margin-left:65px;" src="images/homeTobica/degree.jpg" alt="Card image">
                </div>
                </div>
+               <hr>
+    <div style="" class="">
+          <a href="#comment" style="color:red"><img src="images/homeTobica/comment.jpg" width="60px" alt=""> COMMENT </a>
+        
+    </div>
+
+
+
+
             </div>
          </div>
       </div>
       </div>
       </div>
+
+
+
+
       <!-- Start footer -->
       <div class="main">
          <div class="wrapper">
