--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
                            </ul>
                         </div>
                      </nav>
-                     <div class="col-md-3 tobica-login float-right">
+                     <div class="col-md-3 tobica-login">
                         <button type="button" class="btn btn-warning btn-login-tobica">Login</button>
                      </div>
                      <div>
