--- a/Contact.html
+++ b/Contact.html
@@ -164,7 +164,7 @@
 				<div class="Center-Contact">
 					<div class="Center">
 					 	<div class="Center1">
-							<h5>TON THAT THUYET CENTER</h5>
+							<h5>MY DINH CENTER</h5>
 							<img src="images/ContactImage/address.png" alt="address">
 							<h6>: FPT Building, 8A Ton That Thuyet, My Dinh, Ha Noi</h6>
 							<img src="images/ContactImage/phone.png" alt="address">
@@ -225,7 +225,7 @@
 				
 				<div class="Contact-map">
 					<div class="NameOfCenter">
-						<button type="button">TON THAT THUYET CENTER</button>
+						<button type="button">MY DINH CENTER</button>
 						<button type="button">DOI CAN CENTER</button>
 						<button type="button">HOA LAC CENTER</button>
 					</div>
