--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
 
    </head>
    <body style="background:#F7F5F4;">
-   &nbsp;
+   &nbsp;&nbsp;
       <!-- Start Header -->
       <div class="main">
          <div class="wrapper">
