--- a/registration.html
+++ b/registration.html
@@ -18,8 +18,8 @@
     <title>TOBICA - Trang Chủ</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="stylesheet" href="css/home.css">
-    <link href="css/contact.css" rel="stylesheet" type="text/css">
-    <link href="css/feedback.css" rel="stylesheet" type="text/css">
+	<link href="css/contact.css" rel="stylesheet" type="text/css">
+	<link href="css/registration.css" rel="stylesheet" type="text/css">
   <script src="js/home.js">
     </script>
     <script src="lazyload.min.js"></script>
