--- a/home.html
+++ b/home.html
@@ -88,8 +88,8 @@
                                  Course
                                  </a>
                                  <div class="drop-menu  menu_page" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="drop-item" href="#">Basic course</a>
-                                    <a class="drop-item" href="#">Advanced course </a>
+                                    <a class="drop-item" href="Basic_course.html">Basic course</a>
+                                    <a class="drop-item" href="advanced_course.html">Advanced course </a>
                                     <a class="drop-item" href="#">Course Toeic - Toefl</a>
                                  </div>
                               </li>
@@ -455,8 +455,40 @@
                <hr>
     <div style="" class="">
           <a href="#comment" style="color:red"><img src="images/homeTobica/comment.jpg" width="60px" alt=""> COMMENT </a>
-        
+ <hr>
     </div>
+   <div class="comment">
+<div class="comment_1">
+ <img src="images/homeTobica/khachhang1.jpg" width="80" style="margin-top:20px" height="80" alt="">
+</div>
+<div class="comment_2">
+ <h5>NguyenYen325</h5>
+ <h6>Toi rat hai long ve phuong phap day doi moi cua tobica English .</h6>
+ <p>2019-02-10 20:15 </p>
+</div>
+</div>
+<hr>
+<div class="comment">
+<div class="comment_1">
+<img src="images/homeTobica/khachhang2.jpg" width="80" style="margin-top:20px" height="80" alt="">
+</div>
+<div class="comment_2">
+<h5>ThuyLinh(student)</h5>
+<h6>Toi that su cam thay rat vui mung khi biet den tobica English tobica English .</h6>
+<p>2018-05-01 10:23 </p>
+</div>
+</div>
+<hr>
+<div class="form-group">
+
+  <div class="form-group">
+
+    <textarea  placeholder="Please Comment here..." class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+  </div>
+</div>
+<button style="padding:10px;margin-bottom:20px;" type="button" class="btn btn-outline-primary">Login now</button>
+
+
 
 
 
