--- a/hocvien.html
+++ b/hocvien.html
@@ -48,8 +48,8 @@
                                  Course
                                  </a>
                                  <div class="drop-menu  menu_page" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="drop-item" href="#">Basic course</a>
-                                    <a class="drop-item" href="#">Advanced course </a>
+                                    <a class="drop-item" href="Basic_course.html">Basic course</a>
+                                    <a class="drop-item" href="advanced_course.html">Advanced course </a>
                                     <a class="drop-item" href="#">Course Toeic - Toefl</a>
                                  </div>
                               </li>
@@ -91,7 +91,7 @@
                                            <!-- Start content -->
       <div class="main">
       <div class="wrapper">
-         <div class="container" style="background: white;margin-top:70px;">
+         <div class="container" style="background: white;margin-top:10px;">
             <div class="row" style="background:white;" id="bgr" >
                <div class="col-md-3">
                   <div class="fast_access  ">
@@ -105,7 +105,7 @@
                         <li><a href="#15"><img src="images/hometobica/muiten.png" alt="">Toetic Class  <img src="images/hometobica/new.gif" width="40px;" alt=""> </a></li>
                      </ul>
                   </div>
-                  <img style="margin-top:20px;margin-left:10px;" src="images/hometobica/book.png" width="260px" height="400px;" alt="">
+              <a href="#bool">    <img style="margin-top:20px;margin-left:10px;" src="images/hometobica/book.png" id="book" width="260px" height="400px;" alt=""></a>
                </div>
                <div class="col-md-3">
                   <div class="text-center mb-4 mt-4"  >
