--- a/hocvien.html
+++ b/hocvien.html
@@ -87,57 +87,7 @@
             </div>
          </div>
       </div>
-      <!--slide show-->
-    <div class="main">
-       <div class="wrapper">
-          <div class="container">
-             <div class="row">
-                <div class="content-tobica">
-                   <!--Start Slide-show -->
-                   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                      <ol class="carousel-indicators">
-                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                      </ol>
-                      <div class="carousel-inner tobica-slideshow">
-                         <div class="carousel-item active">
-                            <img src="images/slide1.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                               <h2>Train communication skills</h2>
-                               <p>...</p>
-                            </div>
-                         </div>
-                         <div class="carousel-item">
-                            <img src="images/slide2.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                               <h2>Overcome yourself</h2>
-                               <p>...</p>
-                            </div>
-                         </div>
-                         <div class="carousel-item">
-                            <img src="images/slide3.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                              <h2>Reaching dreams</h2>
-                               <p>...</p>
-                            </div>
-                         </div>
-                      </div>
-                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                      </a>
-                      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                      </a>
-                   </div>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
-   <!--end Slide show-->
+    
                                            <!--Câu chuyện thành công-->
                                            <!-- Start content -->
       <div class="main">
@@ -320,7 +270,7 @@
                   <div class="col-lg-3 col-md-6 col-sm-12">
                      <div class="footer-address">
                         <div class="pre-footer-heading">
-                           <h5>Hỗ trợ</h5>
+                           <h5>Support</h5>
                         </div>
                         <div class="contact-info-footer">
                            <!-- Contact Info List -->
@@ -343,7 +293,7 @@
                   <div class="col-lg-3 col-md-6 col-sm-12">
                      <div class="footer-payment">
                         <div class="pre-footer-heading">
-                           <h5>Thanh toán</h5>
+                           <h5>Payment</h5>
                         </div>
                         <div class="row">
                            <div class="col-6 col-md-3"><img src="images/Master.png" alt"MasterCard" width="50px" /></div>
@@ -359,21 +309,21 @@
                   <div class="col-lg-3 col-md-6 col-sm-12">
                      <div class="footer-support">
                         <div class="pre-footer-heading">
-                           <h5>Hỗ trợ học viên</h5>
+                           <h5>Support students</h5>
                         </div>
                         <!-- Footer Menu -->
                         <ul class="footer-support-menu">
                            <!-- Footer Menu Item -->
-                           <li><a href="#">Tư vấn khóa học</a></li>
+                           <li><a href="#">Course advice</a></li>
                            <!-- End Footer Menu Item -->
                            <!-- Footer Menu Item -->
-                           <li><a href="#!">Tư vấn xử lí thanh toán</a></li>
+                           <li><a href="#!">Payment processing advice</a></li>
                            <!-- End Footer Menu Item -->
                            <!-- Footer Menu Item -->
-                           <li><a href="#!">Tư vẫn xử lí tốt nghiệp</a></li>
+                           <li><a href="#!">Consultation on graduation</a></li>
                            <!-- End Footer Menu Item -->
                            <!-- Footer Menu Item -->
-                           <li><a href="#!">Tư vấn bảo lưu kết quả học tập</a></li>
+                           <li><a href="#!">Advice on preservation of academic results</a></li>
                            <!-- End Footer Menu Item -->
                         </ul>
                      </div>
@@ -383,19 +333,19 @@
                   <div class="col-lg-3 col-md-6 col-sm-12">
                      <div class="footer-basis">
                         <div class="pre-footer-heading">
-                           <h5>Cơ sở đào tạo</h5>
-                        </div>
-                        <ul class="footer-basis-menu">
-                           <li><img src="images/icon-basis.png" alt="icon-basis" width="15px">
-                              Cơ sở 1: 8A Tôn Thât Thuyết
-                           </li>
-                           <li><img src="images/icon-basis.png" alt="icon-basis" width="15px">
-                              Cơ sở 2: 265 Đội Cấn
-                           </li>
-                           <li> <img src="images/icon-basis.png" alt="icon-basis" width="15px">
-                              Cơ sở 3: Khu CN cao Hòa Lạc
-                           </li>
-                        </ul>
+                          <h5>Training facilities</h5>
+                       </div>
+                       <ul class="footer-basis-menu">
+                          <li><img src="images/icon-basis.png" alt="icon-basis" width="15px">
+                             Add 1: 8A Ton That Thuyet
+                          </li>
+                          <li><img src="images/icon-basis.png" alt="icon-basis" width="15px">
+                             Add 2: 265 Doi Can
+                          </li>
+                          <li> <img src="images/icon-basis.png" alt="icon-basis" width="15px">
+                             Add 3: Khu CN cao Hoa Lac
+                          </li>
+                       </ul>
                      </div>
                   </div>
                   <!-- End footer-basis-->
